feat: Added basic logic for jwt auth

--- a/CarStockAPI/appsettings.json
+++ b/CarStockAPI/appsettings.json
@@ -8,5 +8,11 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Database=carstock;Username=postgres;Password=12345;"
+    },
+    "JwtConfig": {
+        "Secret": "sJUNACEBtdAeaHehYdkcAzzGijmjSPaE",
+        "Issuer": "https://localhost:7087",
+        "Audience": "https://localhost:7087"
     }
-}
+    }
+
