--- a/CarStockBLL/appsettings.json
+++ b/CarStockBLL/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "JwtConfig": {
+        "Secret": "sJUNACEBtdAeaHehYdkcAzzGijmjSPaE",
+        "Issuer": "https://localhost:7087",
+        "Audience": "localhost"
+    }
 }
