feat: Added Serilog

--- a/CarStockAPI/appsettings.Development.json
+++ b/CarStockAPI/appsettings.Development.json
@@ -1,8 +1,33 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft.AspNetCore.Hosting": "Warning",
+                "Microsoft.AspNetCore.Mvc": "Warning",
+                "Microsoft.AspNetCore.Routing": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "./logs/log-.txt",
+                    "rollingInterval": "Day",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "PostgreSQL",
+                "Args": {
+                    "connectionString": "DefaultConnection",
+                    "tableName": "Logs",
+                    "needAutoCreateTable": true
+                }
+            }
+        ]
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=carstock;Username=postgres;Password=12345;"
     }
-  }
 }
