feat: Added CORS policy

--- a/CarStockAPI/appsettings.json
+++ b/CarStockAPI/appsettings.json
@@ -13,6 +13,11 @@
         "Secret": "sJUNACEBtdAeaHehYdkcAzzGijmjSPaE",
         "Issuer": "https://localhost:7087",
         "Audience": "https://localhost:7087"
+    },
+    "Cors": {
+        "AllowedOrigins": [
+            "https://localhost:7087",
+            "http://localhost:5081"
+        ]
     }
 }
-
