--- a/CarStockAPI/appsettings.Development.json
+++ b/CarStockAPI/appsettings.Development.json
@@ -24,6 +24,12 @@
                     "tableName": "Logs",
                     "needAutoCreateTable": true
                 }
+            },
+            {
+                "Name": "Console",
+                "Args": {
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+                }
             }
         ]
     },
