--- a/CarStockBLL/CarStockBLL.csproj
+++ b/CarStockBLL/CarStockBLL.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\CarStockDAL\CarStockDAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
