refactor: New exception middleware

--- a/CarStockAPI/CarStockAPI.csproj
+++ b/CarStockAPI/CarStockAPI.csproj
@@ -30,6 +30,10 @@
     <ProjectReference Include="..\CarStockMAP\CarStockMAP.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="logs\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
