fix: Refactor for Program.cs

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 CarStockAPI/appsettings.json
 
 # Database-specific directories
-CarStockDAL/Migrations
+CarStockDAL/Migrations/
 
 # User-specific files
 *.rsuser
