feat: CQRS and MediatR added

--- a/CarStockBLL/CarStockBLL.csproj
+++ b/CarStockBLL/CarStockBLL.csproj
@@ -19,7 +19,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Common\Common.csproj" />
 		<ProjectReference Include="..\CarStockDAL\CarStockDAL.csproj" />
+		<ProjectReference Include="..\Common\Common.csproj" />
 	</ItemGroup>
 
 </Project>
