--- a/CarStockAPI/CarStockAPI.csproj
+++ b/CarStockAPI/CarStockAPI.csproj
@@ -14,7 +14,11 @@
 		<OutputPath>bin\Release\net6.0\</OutputPath>
 	</PropertyGroup>
 	<ItemGroup>
+    <PackageReference Include="Autofac" Version="8.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.39" />
@@ -34,6 +38,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CarStockBLL\CarStockBLL.csproj" />
     <ProjectReference Include="..\CarStockDAL\CarStockDAL.csproj" />
+    <ProjectReference Include="..\MediatrBL\MediatrBL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
